Lots of updates
I added more content, changed the file structure, and created a login experience

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,26 @@
 /* ==AWESOME VARIABLE ZONE== */
+
 /* 1. Global */
 :root {
-  --line-height: 1.38;
+  --line-height: 1.41;
 }
+
 /* 2. Font sizes */
 :root {
-  --body-font-size: 1.2rem;
+  --large-font-size: 1.6rem;
+  --body-font-size: 1.1rem;
   --small-font-size: .96rem;
   --micro-font-size: .8rem;
 }
 @media only screen and (min-width: 1023px) {
   :root {
-    --body-font-size: 1.375rem;
+    --large-font-size: 1.7rem;
+    --body-font-size: 1.3rem;
     --small-font-size: 1.1rem;
     --micro-font-size: .9rem;
   }
 }
+
 /* 3. Colors */
 :root {
   --background-color: #ffffff;
@@ -31,10 +36,11 @@
     --font-color: #f2f1ef;
     --sec-color: #a9a9a9;
     --img-bg-color: #1f1f1f;
-    --cta-background: #f4ffc8;
+    --cta-background: #e9f7bc;
     --visited-link: #8487f7;
   }
 }
+
 /* 4. Spacing */
 :root {
   --spacing-xxsmall: calc(var(--line-height)*var(--body-font-size)* 0.2);
@@ -44,6 +50,11 @@
   --spacing-large: calc(var(--line-height)*var(--body-font-size)* 3);
   --spacing-xlarge: calc(var(--line-height)*var(--body-font-size)* 5);
 }
+
+
+
+
+
 
 
 /* ==GLOBAL ZONE== */
@@ -79,18 +90,19 @@ body {
   font-family: 'GT America Medium', sans-serif;
   -webkit-font-smoothing: subpixel-antialiased
 }
-.small-text {
-  font-size: var(--small-font-size);
+.intro-text {
+  color: var(--sec-color);
+  font-family: 'GT America Medium Italic', sans-serif;
+  -webkit-font-smoothing: subpixel-antialiased
 }
-.micro-text {
-  font-size: var(--micro-font-size);
-}
+.small-text { font-size: var(--small-font-size) !important }
+.micro-text { font-size: var(--micro-font-size) !important }
 .caption-text {
   text-align: center;
   color: var(--sec-color)
 }
-p:not(:last-child), h2:not(:last-child), h1:not(:last-child){
-  margin-bottom: var(--spacing-xsmall)
+p:not(:last-child), h2, h1 {
+  margin-bottom: var(--spacing-small)
 }
 @font-face {
   font-family: 'GT America Regular';
@@ -104,15 +116,10 @@ p:not(:last-child), h2:not(:last-child), h1:not(:last-child){
        url('/fonts/GT-America-Standard-Medium.woff') format('woff');
   font-weight: medium;
 }
-
-/* Dummy images */
-.dummy-image-4-by-3 {
-  height: 0;
-  background:var(--img-bg-color);
-  overflow: hidden;
-  padding-top: 75%;
-  position: relative;
-  border-radius: .15em;
+@font-face {
+  font-family: 'GT America Mono Medium';
+  src: url('/fonts/GT-America-Mono-Medium.woff2') format('woff2');
+  font-weight: medium;
 }
 
 /* Border radius for images */
@@ -120,8 +127,17 @@ img { border-radius: 0.15rem }
 
 /* Links */
 .no-link-underline { text-decoration: none }
-a:visited.visited-link { color: var(--visited-link) }
 
-/* html {
-  scroll-behavior: smooth;
-} */
+.link-underline-hover {
+  text-decoration: none;
+}
+.link-underline-hover {
+  text-decoration: none;
+}
+
+  .link-underline-hover:hover {
+    text-decoration: underline
+  }
+
+
+a:visited.visited-link { color: var(--visited-link) }
