--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,21 @@
 
 /* 1. Global */
 :root {
-  --line-height: 1.41;
+  --line-height: 1.37;
 }
 
 /* 2. Font sizes */
 :root {
-  --large-font-size: 1.6rem;
-  --body-font-size: 1.1rem;
+  --large-font-size: 1.2rem;
+  --body-font-size: 1.12rem;
   --small-font-size: .96rem;
   --micro-font-size: .8rem;
 }
 @media only screen and (min-width: 1023px) {
   :root {
-    --large-font-size: 1.7rem;
-    --body-font-size: 1.3rem;
-    --small-font-size: 1.1rem;
+    --large-font-size: 1.5rem;
+    --body-font-size: 1.38rem;
+    --small-font-size: 1.17rem;
     --micro-font-size: .9rem;
   }
 }
@@ -26,16 +26,16 @@
   --background-color: #ffffff;
   --font-color: #000000;
   --sec-color: #898989;
-  --img-bg-color: #f1f1f1;
+  --container-color: #e8e8e8;
   --cta-background: #707144;
   --visited-link: #0041FF;
 }
 @media (prefers-color-scheme: dark) {
   :root {
     --background-color: #101011;
-    --font-color: #f2f1ef;
+    --font-color: #f5f5f5;
     --sec-color: #a9a9a9;
-    --img-bg-color: #1f1f1f;
+    --container-color: #292929;
     --cta-background: #e9f7bc;
     --visited-link: #8487f7;
   }
@@ -44,16 +44,12 @@
 /* 4. Spacing */
 :root {
   --spacing-xxsmall: calc(var(--line-height)*var(--body-font-size)* 0.2);
-  --spacing-xsmall: calc(var(--line-height)*var(--body-font-size)* 0.5);
+  --spacing-xsmall: calc(var(--line-height)*var(--body-font-size)* 0.75);
   --spacing-small: calc(var(--line-height)*var(--body-font-size)* 1);
-  --spacing-medium: calc(var(--line-height)*var(--body-font-size)* 1.5);
-  --spacing-large: calc(var(--line-height)*var(--body-font-size)* 3);
+  --spacing-medium: calc(var(--line-height)*var(--body-font-size)* 2);
+  --spacing-large: calc(var(--line-height)*var(--body-font-size)* 3.5);
   --spacing-xlarge: calc(var(--line-height)*var(--body-font-size)* 5);
 }
-
-
-
-
 
 
 
@@ -90,25 +86,17 @@ body {
   font-family: 'GT America Medium', sans-serif;
   -webkit-font-smoothing: subpixel-antialiased
 }
-.intro-text {
-  color: var(--sec-color);
-  font-family: 'GT America Medium Italic', sans-serif;
-  -webkit-font-smoothing: subpixel-antialiased
-}
 .small-text { font-size: var(--small-font-size) !important }
 .micro-text { font-size: var(--micro-font-size) !important }
 .caption-text {
   text-align: center;
   color: var(--sec-color)
 }
-p:not(:last-child), h2, h1 {
-  margin-bottom: var(--spacing-small)
+.center-text {
+  text-align: center;
 }
-@font-face {
-  font-family: 'GT America Regular';
-  src: url('/fonts/GT-America-Standard-Regular.woff2') format('woff2'),
-       url('/fonts/GT-America-Standard-Regular.woff') format('woff');
-  font-weight: normal;
+p:not(:last-child), h2, h1 {
+  margin-bottom: var(--spacing-xsmall)
 }
 @font-face {
   font-family: 'GT America Medium';
@@ -117,13 +105,18 @@ p:not(:last-child), h2, h1 {
   font-weight: medium;
 }
 @font-face {
+  font-family: 'GT America Bold';
+  src: url('/fonts/GT-America-Standard-Bold.woff2') format('woff2');
+  font-weight: bold;
+}
+@font-face {
   font-family: 'GT America Mono Medium';
   src: url('/fonts/GT-America-Mono-Medium.woff2') format('woff2');
   font-weight: medium;
 }
 
 /* Border radius for images */
-img { border-radius: 0.15rem }
+img { border-radius: 0.15rem; }
 
 /* Links */
 .no-link-underline { text-decoration: none }
@@ -141,3 +134,8 @@ img { border-radius: 0.15rem }
 
 
 a:visited.visited-link { color: var(--visited-link) }
+
+/* Video */
+video {
+  width: 100%
+}
