--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,9 @@
 /* 3. Colors */
 :root {
   --background-color: #ffffff;
-  --font-color: #000000;
+  --font-color: #0a0a0a;
   --sec-color: #6f6f6f;
+  --third-color: #ececec;
   --container-color: #dcdcdc;
   --cta-background: #707144;
   --visited-link: #0041FF;
@@ -35,8 +36,9 @@
     --background-color: #101011;
     --font-color: #f5f5f5;
     --sec-color: #a9a9a9;
+    --third-color: #292929;
     --container-color: #292929;
-    --cta-background: #e9f7bc;
+    --cta-background: #aac5ae;
     --visited-link: #8487f7;
   }
 }
