New new new new

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
     --sec-color: #a9a9a9;
     --third-color: #292929;
     --container-color: #292929;
-    --cta-background: #aac5ae;
+    --cta-background: #bdcabf;
     --visited-link: #8487f7;
   }
 }
