--- a/src/reset.css
+++ b/src/reset.css
@@ -6,7 +6,7 @@
 }
 
 /* Remove default padding */
-ul[class],
+ul,
 ol[class] {
   padding: 0;
 }
@@ -18,7 +18,7 @@ h2,
 h3,
 h4,
 p,
-ul[class],
+ul,
 ol[class],
 li,
 figure,
@@ -33,7 +33,7 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
+ul,
 ol[class] {
   list-style: none;
 }
