--- a/src/App.css
+++ b/src/App.css
@@ -2,54 +2,53 @@
 
 /* 1. Global */
 :root {
-  --line-height: 1.28;
+  --line-height: 1.29;
 }
 
 /* 2. Font sizes */
 :root {
-  --large-font-size: 1.2rem;
-  --body-font-size: 1.12rem;
-  --small-font-size: .96rem;
-  --micro-font-size: .8rem;
+  --large-font-size: 1.24rem;
+  --body-font-size: 1.05rem;
+  --small-font-size: .85rem;
 }
-@media only screen and (min-width: 1023px) {
+@media only screen and (min-width: 769px) {
   :root {
-    --large-font-size: 1.5rem;
-    --body-font-size: 1.38rem;
-    --small-font-size: 1.17rem;
-    --micro-font-size: .9rem;
+    --large-font-size: 1.375rem;
+    --body-font-size: 1.125rem;
+    --small-font-size: 0.875rem;
   }
 }
 
 /* 3. Colors */
 :root {
-  --background-color: #ffffff;
-  --font-color: #000000;
-  --sec-color: #6f6f6f;
+  --background-color: #fbfbfb;
+  --font-color: #222222;
+  --sec-color: #6A6A6A;
   --third-color: #ececec;
   --container-color: #dcdcdc;
-  --cta-background: #707144;
+  --cta-background: #A85FE1;
+  --link-color: #B0A3FF;
   --visited-link: #0041FF;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #101011;
+    --background-color: #000000;
     --font-color: #f5f5f5;
     --sec-color: #a9a9a9;
     --third-color: #292929;
     --container-color: #292929;
-    --cta-background: #bdcabf;
+    --cta-background: #D2CBFF;
+    --link-color: #B0A3FF;
     --visited-link: #8487f7;
   }
 }
 
 /* 4. Spacing */
 :root {
-  --spacing-xxsmall: calc(var(--line-height)*var(--body-font-size)* 0.4);
-  --spacing-xsmall: calc(var(--line-height)*var(--body-font-size)* 0.75);
+  --spacing-xsmall: calc(var(--line-height)*var(--body-font-size)* 0.5);
   --spacing-small: calc(var(--line-height)*var(--body-font-size)* 1);
   --spacing-medium: calc(var(--line-height)*var(--body-font-size)* 2);
-  --spacing-large: calc(var(--line-height)*var(--body-font-size)* 3.5);
+  --spacing-large: calc(var(--line-height)*var(--body-font-size)* 4);
   --spacing-xlarge: calc(var(--line-height)*var(--body-font-size)* 5);
 }
 
@@ -63,81 +62,79 @@ body {
   background: var(--background-color);
   color: var(--font-color)
 }
-h2, h3 { color: var(--sec-color) }
 .light-text { color: var(--sec-color) }
-.dark-text { color: var(--font-color) }
+.dark-text  { color: var(--font-color) }
 
 /* Spacing */
-.spacing-xxsmall-top    { margin-top: var(--spacing-xxsmall) !important }
 .spacing-xsmall-top     { margin-top: var(--spacing-xsmall) !important }
 .spacing-small-top      { margin-top: var(--spacing-small) !important }
 .spacing-medium-top     { margin-top: var(--spacing-medium) !important }
 .spacing-large-top      { margin-top: var(--spacing-large) !important }
-.spacing-xlarge-top     { margin-top: var(--spacing-xlarge) !important }
-.spacing-xxsmall-bottom { margin-bottom: var(--spacing-xxsmall) !important }
 .spacing-xsmall-bottom  { margin-bottom: var(--spacing-xsmall) !important }
 .spacing-small-bottom   { margin-bottom: var(--spacing-small) !important}
 .spacing-medium-bottom  { margin-bottom: var(--spacing-medium) !important }
 .spacing-large-bottom   { margin-bottom: var(--spacing-large) !important }
-.spacing-xlarge-bottom  { margin-bottom: var(--spacing-xlarge) !important }
 
 /* Typography */
 body {
   font-size: var(--body-font-size);
   line-height: var(--line-height);
-  font-family: 'GT America Medium', sans-serif;
+  font-family: 'NB International Regular', sans-serif;
   -webkit-font-smoothing: antialiased
 }
-.small-text { font-size: var(--small-font-size) !important }
-.micro-text { font-size: var(--micro-font-size) !important }
+h1 {
+  font-size: var(--large-font-size) 
+}
+h1, h2, h3, .bold-text {
+  font-family: 'NB International Bold', sans-serif
+}
 .caption-text {
   text-align: center;
   color: var(--sec-color)
 }
-.center-text {
-  text-align: center;
-}
 p:not(:last-child), h2, h1 {
+  margin-bottom: var(--spacing-xsmall)
+}
+.large-text  { font-size: var(--large-font-size) !important }
+.small-text  { font-size: var(--small-font-size) !important }
+.micro-text  { font-size: var(--micro-font-size) !important }
+.center-text { text-align: center }
+@font-face {
+  font-family: 'NB International Regular';
+  src: url('/fonts/nb_international_pro_regular.woff2') format('woff2'),
+       url('/fonts/nb_international_pro_regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'NB International Bold';
+  src: url('/fonts/nb_international_pro_bold.woff2') format('woff2'),
+       url('/fonts/nb_international_pro_bold.woff') format('woff');
+}
+
+
+/* Links */
+.no-link-undelrine {
+  text-decoration: none !important;
+  border-bottom: none
+}
+a {
+  text-decoration: none !important;
+  border-bottom: 2px solid var(--link-color)
+}
+a.light-text, .light-text a, .caption-text a {
+  border-bottom: 1px solid var(--sec-color)
+}
+
+
+/* Lists */
+ol {
+  padding-left: 1em;
+}
+li:not(:last-child) {
   margin-bottom: var(--spacing-small)
-}
-@font-face {
-  font-family: 'GT America Medium';
-  src: url('/fonts/GT-America-Standard-Medium.woff2') format('woff2'),
-       url('/fonts/GT-America-Standard-Medium.woff') format('woff');
-  font-weight: medium;
-}
-@font-face {
-  font-family: 'GT America Bold';
-  src: url('/fonts/GT-America-Standard-Bold.woff2') format('woff2');
-  font-weight: bold;
-}
-@font-face {
-  font-family: 'GT America Mono Medium';
-  src: url('/fonts/GT-America-Mono-Medium.woff2') format('woff2');
-  font-weight: medium;
 }
 
 /* Border radius for images */
 img { border-radius: 0.15rem; }
 
-/* Links */
-.no-link-underline { text-decoration: none }
-
-.link-underline-hover {
-  text-decoration: none;
-}
-.link-underline-hover {
-  text-decoration: none;
-}
-
-  .link-underline-hover:hover {
-    text-decoration: underline
-  }
-
-
-a:visited.visited-link { color: var(--visited-link) }
-
 /* Video */
-video {
-  width: 100%
-}
+video { width: 100% }
