--- a/src/reset.css
+++ b/src/reset.css
@@ -34,7 +34,7 @@ dd {
 
 /* Remove list styles on ul, ol elements with a class attribute */
 ul,
-ol[class] {
+ul[class] {
   list-style: none;
 }
 
